--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
         <title>PortMap</title>
         <style>
             body {
-                background-color: #1d1d1d;
+                background-color: #101010;
                 color: #ffffff;
                 font-family: arial, sans-serif;
                 font-size: 16px;
@@ -15,7 +15,7 @@
                 padding: 0;
             }
             #title {
-                background-color: #000000;
+                background-color: #101010;
                 color: #ffffff;
                 font-family: arial, sans-serif;
                 font-size: 40px;
@@ -30,7 +30,8 @@
             }
             table {
                 border-collapse: collapse;
-                width: 100%;
+                width: 90%;
+                margin: auto;
             }
             th, td {
                 padding: 8px;
@@ -38,17 +39,17 @@
                 border-bottom: 1px solid #ddd;
             }
             tr:hover {
-                background-color: #000000;
+                background-color: #181818;
             }
             th {
-                background-color: #000000;
+                background-color: #101010;
                 color: #ffffff;
             }
             a {
                 color: #ffffff;
             }
             #footer {
-                background-color: #000000;
+                background-color: #101010;
                 color: #ffffff;
                 font-family: arial, sans-serif;
                 font-size: 16px;
