--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,64 +5,7 @@
         <meta name="robots" content="noindex">
         <meta http-equiv="cache-control" content="no-cache">
         <title>PortMap</title>
-        <style>
-            body {
-                background-color: #101010;
-                color: #ffffff;
-                font-family: arial, sans-serif;
-                font-size: 16px;
-                margin: 0px;
-                padding: 0;
-            }
-            #title {
-                background-color: #101010;
-                color: #ffffff;
-                font-family: arial, sans-serif;
-                font-size: 40px;
-                margin: 0;
-                padding: 0;
-                text-align: center;
-            }
-            #content {
-                margin: 0;
-                padding: 0;
-                text-align: center;
-            }
-            table {
-                border-collapse: collapse;
-                width: 90%;
-                margin: auto;
-            }
-            th, td {
-                padding: 8px;
-                text-align: left;
-                border-bottom: 1px solid #ddd;
-            }
-            tr:hover {
-                background-color: #181818;
-            }
-            th {
-                background-color: #101010;
-                color: #ffffff;
-            }
-            a {
-                color: #ffffff;
-            }
-            #footer {
-                background-color: #101010;
-                color: #ffffff;
-                font-family: arial, sans-serif;
-                font-size: 16px;
-                margin: 0;
-                padding: 0;
-                text-align: center;
-                /* bottom */
-                position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-            }
-        </style>
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         <h1 id="title">PortMap</h1>
