--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
         <div id="content">
         </div>
         <div id="footer">
-            <p>This project is <strong>open source</strong> and available on <a href="https://www.github.com/lewisevans2007/PortMap">GitHub</a>.</p>
+            <p>This project is <strong>open source</strong> and available on <a href="https://www.github.com/0x4248/PortMap">GitHub</a>.</p>
         <script async defer>
             function getJSON(){
                 var xmlhttp = new XMLHttpRequest();
